tdf#103983 VML import: handle <v:textbox style="mso-fit-shape-to-text:t">

We used to always always set TextAutoGrowHeight to true, only do that
when the matching VML attribute is detected, default to false.

This helps the exporter, so it writes the correct markup on save of the
bugdoc.

Also adapt testGroupshapeChildRotation, which in practice tested the
automatic height of the shape. The point of "auto" is that it changes as
needed, hardcoding that value in a test is not a great idea. Rather test
that the height is no longer automatic (there is no explicit markup in
the file, and the default is false).

Change-Id: Ie39408b7da53f4923a2ade503e520c704a86bcf4